<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".fragments.MapFragment">

    <com.mapbox.mapboxsdk.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="0dp">
    </com.mapbox.mapboxsdk.maps.MapView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:src="@drawable/baseline_settings_black_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:id="@+id/fab_settings"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/mapView"
            app:backgroundTint="#CCCBCB"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:src="@drawable/baseline_gps_fixed_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:id="@+id/fab_reset"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/mapView" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:backgroundTint="#CCCBCB"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:src="@drawable/baseline_sync_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:id="@+id/fab_sync"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/mapView" app:backgroundTint="#CCCBCB"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:src="@drawable/baseline_more_vert_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:id="@+id/fab_more"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/mapView" app:backgroundTint="#CCCBCB"/>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/map_sync_date"
              android:text="Date"
              app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="8dp"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="8dp"
              app:layout_constraintTop_toTopOf="@+id/mapView"/>

</androidx.constraintlayout.widget.ConstraintLayout>